--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <title> Welcome to unglurd! </title>
   </head>
   <body>
-<h1> Unglurd is the word </h1>
-<h2> Sometimes we're all a little unglurd </h2>
+    <h1> Welcome to unglurd! </h1>
+    <h1> Unglurd is the word </h1>
+        <h2> Sometimes we're all a little unglurd </h2>
   </body>
 </html>
