--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <h1> Welcome to unglurd! </h1>
     <h1> Unglurd is the word </h1>
         <h2> Sometimes we're all a little unglurd </h2>
+    <br>
+    <a href="https://www.unglurd.com/ellie">Visit Ellie on UnGlurd</a>
   </body>
 </html>
