--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   </head>
   <body>
     <h1> Welcome to unglurd! </h1>
-    <h1> Unglurd is the word </h1>
-        <h2> Sometimes we're all a little unglurd </h2>
+    <h3> Unglurd is the word </h3>
+        <h3> Sometimes we're all a little unglurd </h3>
     <br>
-    <a href="https://www.unglurd.com/ellie">Visit Ellie on UnGlurd</a>
+    <a href="https://www.unglurd.com/ellie.html">Visit Ellie on UnGlurd</a>
   </body>
 </html>
