--- a/Ellie.html
+++ b/Ellie.html
@@ -1,9 +1,12 @@
 <html>
   <head>
-    <title> Embedding Scratch Projects (Test) </title>
+    <title> Ellie's page! </title>
   </head>
   <body>
-<h1> The Pong Game </h1>
+<h1> Embedding Scratch Projects (Test) </h1>
+    <br>
+    <br>
+    <h2> The Pong Game </h2>
     <iframe src="https://scratch.mit.edu/projects/164932339/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <h2> By purplejane </h2>
   </body>
