Update link to Ellie's page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <h3> Unglurd is the word </h3>
         <h3> Sometimes we're all a little unglurd </h3>
     <br>
-    <a href="https://www.unglurd.com/ellie.html">Visit Ellie on UnGlurd</a>
+    <a href="ellie.html">Visit Ellie on UnGlurd</a>
   </body>
 </html>
