Lots of updates!

--- a/Bellatrix/index.html
+++ b/Bellatrix/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
-    <title> Ellie's page! </title>
+    <!-- Favicon for browsers -->
+    <link rel="icon" href="/favicon-32x32.png" type="image/png"/>
+    
+    <title> Bellatrix's page! </title>
   </head>
   <body>
 <h1> Embedding Scratch Projects (Test) </h1>
