--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
   <head>
+    <!-- Favicon for browsers -->
+    <link rel="icon" href="/favicon-32x32.png" type="image/png"/>
+    
+    <!-- Optional: Apple Touch Icon for iOS devices -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
+
     <title> Welcome to unglurd! </title>
   </head>
   <body>
     <h1> Welcome to unglurd! </h1>
     <h3> Unglurd is the word </h3>
         <h3> Sometimes we're all a little unglurd </h3>
-    <br>
-    <a href="/ellie/">Visit Ellie on UnGlurd</a>
+        <img src="favicon.ico" alt="Our mascot">
+    <br> <br>
+    <a href="/DaBoss/">Visit Da Boss on UnGlurd</a> <br> <br>
+    <a href="/M-Town/">Visit M-Town on UnGlurd</a> <br> <br>
+    <a href="/Bellatrix/">Visit Bellatrix on UnGlurd</a> <br> <br>
+    <a href="/Luna/">Visit Luna Lovegood on UnGlurd</a> <br> <br>
+    <a href="/Mr_T/">Visit Mr. T on UnGlurd</a> <br> <br>
   </body>
 </html>
